# arch-initramfs-ui

./: .gitignore  Cargo.toml  Makefile  README.md  cmdline  install-efi-record.sh  linux.preset  make-fbterm.sh  mkinitcpio.conf
boot-menu/: Cargo.toml
boot-menu/src/: exits.rs  main.rs  password_input.rs  spinner.rs
disk-crypto/: .gitignore  Cargo.toml  README.md
disk-crypto/src/: disk_encryption.rs  keyfile.rs  lib.rs  main.rs  params.rs  unlock_password.rs  unlock_yubikey.rs
egui-fb-backend/: Cargo.toml  keycodes
egui-fb-backend/src/: keys.rs  lib.rs
hooks/hooks/: late_bash_prompt  rust_bootmenu
hooks/install/: late_bash_prompt  rust_bootmenu
