[package]
name = "boot-menu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = { version = "0.20.0", features = ["termion"] }
efivar = "1.4.0"
syscalls = { version = "0.6.13", features = ["x86_64"] }
