[package]
name = "disk-crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argon2 = "0.5.2"
chacha20poly1305 = "0.10.1"
dialoguer = "0.10.4"
hex-string = "0.1.0"
rand = "0.8.5"
secrecy = "0.8.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_with = { version = "3.3.0", features = ["base64"] }
sha2 = "0.10.7"
